objects/User.object
<CustomObject>
    <fields>
        <fullName>Address_Location_Formula__c</fullName>
        <formula>IF ( ISPICKVAL( Location__c , &quot;San Francisco&quot;), &quot;235 Montgomery St, Suite 630, San Francisco, CA 94104&quot;,

IF ( ISPICKVAL( Location__c , &quot;Silicon Valley&quot;), &quot;825 Emerson St, Palo Alto, CA, 94301&quot;,

IF ( ISPICKVAL( Location__c , &quot;East Bay&quot;), &quot;2041 Bancroft Way, Suite 210, Berkeley, CA 94704&quot;,

IF ( ISPICKVAL( Location__c , &quot;Sacramento&quot;), &quot;1007 7th St, Sacramento, CA 95814&quot;,

IF ( ISPICKVAL( Location__c , &quot;New York&quot;), &quot;54 West 40th Street, New York, NY 10018&quot;,&quot;&quot;
)))))</formula>
        <label>Address/Location Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Weekly_Goal__c</fullName>
        <label>App Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_for_Round_Robin_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Round Robin Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Effort_Weekly_Goal__c</fullName>
        <label>BD Effort Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Effort_Weekly_Goal__c</fullName>
        <label>CD Effort Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Weekly_Goal__c</fullName>
        <label>CI Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Monthly_Split_100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CT Monthly Split 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CT_Team_Goal_annual__c</fullName>
        <label>CT Team Goal (yearly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CT_Team_Goal_monthly__c</fullName>
        <label>CT Team Goal (monthly)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CT_User_Split__c</fullName>
        <label>CT User Split %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CV_Pop_in_Networking_Weekly_Goal__c</fullName>
        <label>CV/Pop in/Networking Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Percent_Number__c</fullName>
        <formula>(  CT_User_Split__c    *1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Percent Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Plan_Effective_Date__c</fullName>
        <label>Comp Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_Plan_Note__c</fullName>
        <label>Comp Plan Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Match__c</fullName>
        <formula>IF( Email =  Contact.Email , TRUE, FALSE)</formula>
        <label>Contact Email Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Plan__c</fullName>
        <label>Current Comp Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Base</fullName>
                </value>
                <value>
                    <fullName>CT Recruiter Pool</fullName>
                </value>
                <value>
                    <fullName>CT Team Lead</fullName>
                </value>
                <value>
                    <fullName>CT Manager</fullName>
                </value>
                <value>
                    <fullName>CT SVP</fullName>
                </value>
                <value>
                    <fullName>DH Base + Commission</fullName>
                </value>
                <value>
                    <fullName>DH Full Commission</fullName>
                </value>
                <value>
                    <fullName>DH RA</fullName>
                </value>
                <value>
                    <fullName>DH Sourcer</fullName>
                </value>
                <value>
                    <fullName>DH SVP</fullName>
                </value>
                <value>
                    <fullName>DH Team Lead</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Hire__c</fullName>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Contingent Workforce</fullName>
                </value>
                <value>
                    <fullName>East Bay Administrative</fullName>
                </value>
                <value>
                    <fullName>East Bay Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>East Bay Sales</fullName>
                    <isActive>false</isActive>
                    <label>East Bay Sales</label>
                </value>
                <value>
                    <fullName>New York Administrative</fullName>
                </value>
                <value>
                    <fullName>New York Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>New York Sales</fullName>
                    <isActive>false</isActive>
                    <label>New York Sales</label>
                </value>
                <value>
                    <fullName>PSI Corporate</fullName>
                </value>
                <value>
                    <fullName>Sacramento Administrative</fullName>
                </value>
                <value>
                    <fullName>Sacramento Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>San Francisco Administrative</fullName>
                </value>
                <value>
                    <fullName>San Francisco Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>San Francisco Sales</fullName>
                    <isActive>false</isActive>
                    <label>San Francisco Sales</label>
                </value>
                <value>
                    <fullName>Silicon Valley Administrative</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley Sales</fullName>
                    <isActive>false</isActive>
                    <label>Silicon Valley Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Contract/Temp</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_address_from_contact_record__c</fullName>
        <description>most recently updated email address from related contact record</description>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email address from contact record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Num__c</fullName>
        <label>Emp Num</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_FY__c</fullName>
        <description>The yearly goal set for this rep</description>
        <label>Team Goal (yearly)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Monthly__c</fullName>
        <label>Team Goal (monthly)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Goal__c</fullName>
        <label>Individual Goal (yearly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JO_Weekly_Goal__c</fullName>
        <label>JO Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Assign_Date__c</fullName>
        <label>Last Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Staff_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Staff ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin_URL__c</fullName>
        <label>Linkedin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lives_Changed_Weekly_Goal__c</fullName>
        <label>Lives Changed Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Instructions__c</fullName>
        <formula>IF(ISPICKVAL( Location__c , &quot;Sacramento&quot;), &quot;*Premier&apos;s Sacramento office is nestled on the 5th floor of a building located on the corner of 7th and J Street. When you arrive at the lobby, please text or call me—there&apos;s limited access to our floor, so I&apos;ll come down and escort you up to our office! &quot; +  Phone ,&quot;&quot;)
+
IF(ISPICKVAL( Location__c , &quot;New York&quot;), &quot;*Premier is at the WeWork Bryant Park. Once you arrive please provide your name at the reception desk. Once they check you in your recruiter will come and meet you in the ground floor lobby. Please note the building does not allow unaccompanied guests.&quot;,&quot;&quot;)
+
IF(ISPICKVAL( Location__c , &quot;East Bay&quot;), &quot;*Please use the call box when you arrive and we will buzz you into the building.&quot;,&quot;&quot;)</formula>
        <label>Location Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Logistics__c</fullName>
        <formula>IF(ISPICKVAL( Location__c , &quot;San Francisco&quot;), &quot;Logistics: We recommend taking public transportation to our downtown San Francisco office as our building does not have a dedicated parking structure and we do not validate parking. We are located a short walk away from the Montgomery BART and Muni stations.&quot;,&quot;&quot;)+

IF(ISPICKVAL( Location__c , &quot;Sacramento&quot;), &quot;Logistics: Worried about parking? We&apos;re right across from the DOCO parking garage, and our building is surrounded by metered parking. As a friendly reminder though, please allow yourself enough time to get to our office. Excited to meet you!&quot;,&quot;&quot;)</formula>
        <label>Location Logistics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Base_Draw__c</fullName>
        <label>Monthly Base Draw</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base__c</fullName>
        <label>Monthly Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_User_ID_Formula__c</fullName>
        <formula>IF ( Id =$User.Id,1,0)</formula>
        <label>My User ID Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pod_Commission__c</fullName>
        <label>Pod Commission %</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pod_Name__c</fullName>
        <label>Pod Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hay Cray</fullName>
                </value>
                <value>
                    <fullName>MAK ATK</fullName>
                </value>
                <value>
                    <fullName>Bo$$y</fullName>
                </value>
                <value>
                    <fullName>DreamTeam</fullName>
                </value>
                <value>
                    <fullName>McHammer</fullName>
                </value>
                <value>
                    <fullName>Trident</fullName>
                </value>
                <value>
                    <fullName>MS^2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pod_Team__c</fullName>
        <label>Pod Team #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Team_Member_ID__c</fullName>
        <externalId>true</externalId>
        <label>Premier Team Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prez_Club_Tier_1__c</fullName>
        <label>Prez Club Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prez_Club_Tier_2__c</fullName>
        <label>Prez Club Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Commission__c</fullName>
        <label>RA Commission %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RA_Team_Member_1__c</fullName>
        <label>RA Team Member 1</label>
        <relationshipName>RA_Team_Member_1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RA_Team_Member_2__c</fullName>
        <label>RA Team Member 2</label>
        <relationshipName>RA_Team_Member_2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RA_Team_Member_3__c</fullName>
        <label>RA Team Member 3</label>
        <relationshipName>RA_Team_Member_3</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RA_Team_Members__c</fullName>
        <label># RA Team Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiting_Role__c</fullName>
        <formula>IF( AND(OR(CONTAINS( UserRole.Name , &quot;Recruiter&quot;), CONTAINS(UserRole.Name, &quot;Recruiting Associate&quot;), CONTAINS(UserRole.Name, &quot;Contract/Temp Manager&quot;), CONTAINS(UserRole.Name, &quot;Administrative Manager&quot;), CONTAINS(UserRole.Name, &quot;Managing Director&quot;)),  IsActive = TRUE)  , UserRole.Name, 

 IF(IsActive = FALSE, &quot;INACTIVE USER&quot;, &quot;Operations&quot;) 



)</formula>
        <label>Recruiting Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Fee_Percent__c</fullName>
        <label>Referral Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RingCentral_Meeting_Link__c</fullName>
        <label>RingCentral Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SI_Weekly_Goal__c</fullName>
        <label>SI Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submittal_Weekly_Goal__c</fullName>
        <label>Submittal Weekly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_P_Team_Goal_monthly__c</fullName>
        <label>T-P Team Goal (monthly)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_P_Team_Goal_yearly__c</fullName>
        <label>T-P Team Goal (yearly)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Member_10__c</fullName>
        <label>Team Member 10</label>
        <relationshipName>Team_Member_10</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team_Member_1__c</fullName>
        <label>Team Member 1</label>
        <relationshipName>Team_Member_1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team_Member_2__c</fullName>
        <label>Team Member 2</label>
        <relationshipName>Team_Member_2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label># Team Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Monthly_Quota__c</fullName>
        <inlineHelpText>This is the Quota used on Premier Team Members</inlineHelpText>
        <label>Team Monthly Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Commission__c</fullName>
        <label>Temp Commission %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Testnumber__c</fullName>
        <formula>DAY(TODAY())</formula>
        <label>Testnumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X0_Temp_Earn_In_Month__c</fullName>
        <label>$0 Temp Earn In Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X100_Commission_Earner__c</fullName>
        <formula>IF( CT_User_Split__c = 1.0, TRUE,
 FALSE)</formula>
        <label>100% Commission Earner</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CT_Monthly_User_Split_Percent</fullName>
        <active>true</active>
        <description>Enforces that the CT Monthly User Split % cannot be over 100%</description>
        <errorConditionFormula>CT_User_Split__c  &gt; 1.0</errorConditionFormula>
        <errorDisplayField>CT_User_Split__c</errorDisplayField>
        <errorMessage>CT Monthly User Split Percentage can&apos;t be over 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_required</fullName>
        <active>true</active>
        <errorConditionFormula>Profile.Name &lt;&gt; &quot;Jobseeker Portal Profile&quot; &amp;&amp; Profile.Name &lt;&gt; &quot;Customer Community User&quot; &amp;&amp; ISPICKVAL( Location__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Must enter user&apos;s location to save.</errorMessage>
    </validationRules>
</CustomObject>